--- a/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -19,6 +19,8 @@
                 </li><br>
             </ol>
         </mat-drawer>
-        <router-outlet></router-outlet>
+        <main role="main" [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
+            <router-outlet #outlet="outlet"></router-outlet>
+        </main>
     </mat-drawer-container>
 </div>
