--- a/Projects/angular_ecommerce/src/app/components/home/home.component.html
+++ b/Projects/angular_ecommerce/src/app/components/home/home.component.html
@@ -8,23 +8,22 @@
                     What's FoodCart ?
                 </div>
                 <p>
-                    FoodCart is a software solution that allows administrators to manage
-                    users within an organization. This system typically includes features such as user authentication,
-                    access control, and user provisioning. With a user management system, administrators can easily
-                    create,
-                    modify, and delete user accounts, as well as assign specific permissions to each user.
+                    FoodCart is a convenient service that brings restaurant-quality food straight to your doorstep.
+                    With a few clicks on your phone or computer, you can order your favorite meals from a variety of
+                    restaurants and have them delivered to your home or office.
                 </p>
+                <p>It saves time and effort, making diningat home a more enjoyable experience.</p>
                 <p>
-                    This helps to ensure that only authorized users have access to sensitive data or resources, while
-                    also simplifying the process of managing large numbers of users. Additionally, some user management
-                    systems also include features such as password management and multi-factor authentication to further
-                    enhance security.
+                    Our food ecommerce website offers a convenient and hassle-free way to shop for high-quality, fresh
+                    food products online. From fresh produce to pantry staples, our extensive selection of products is
+                    carefully curated to meet your needs. With fast and reliable delivery, you can enjoy delicious meals
+                    at home with ease.
                 </p>
             </div>
 
 
             <div class="container-fluid col-sm-auto p-3">
-                <img src="../../assets/images/home-1.png" class="img-fluid mx-auto d-block" width="450vw"
+                <img src="../../../assets/images/shopping.png" class="img-fluid mx-auto d-block" width="450vw"
                     style="vertical-align: middle;">
             </div>
         </div>
@@ -34,7 +33,7 @@
         <div class="row">
 
             <div class="container-fluid col-sm-auto p-3">
-                <img src="../../assets/images/home-2.png" class="img-fluid mx-auto d-block" width="400vw"
+                <img src="../../assets/images/shopping2.png" class="img-fluid mx-auto d-block" width="400vw"
                     style="vertical-align: middle;">
             </div>
 
