--- a/Projects/angular_ecommerce/src/app/components/signup/signup.component.html
+++ b/Projects/angular_ecommerce/src/app/components/signup/signup.component.html
@@ -13,7 +13,7 @@
                 <div class="col form-col">
 
                     <div class="h3 text-center mt-4 form-label">Signup for FoodCart</div>
-                    <div class=" text-center text-danger">See your growth and get consulting support</div>
+                    <div class=" text-center text-primary">See your growth and get consulting support</div>
 
                     <form [formGroup]="SignUpForm" id="registration-form" class="form-inline"
                         (ngSubmit)="saveUser(SignUpForm)" #regForm="ngForm">
