--- a/Projects/angular_ecommerce/src/app/components/single-product/single-product.component.html
+++ b/Projects/angular_ecommerce/src/app/components/single-product/single-product.component.html
@@ -96,7 +96,7 @@
                     <div class="card-body">
                         <b>{{product.name}}</b><br>
                         <i>{{product.info}}</i>
-                        <div class="d-flex price-buy">
+                        <div class="d-flex price-buy mt-3">
                             <b>50/-</b>
                             <button class="btn btn-outline-success btn-sm"
                                 (click)="goToProduct(product.id)">Buy</button>
