--- a/Projects/angular_ecommerce/src/app/components/home/home.component.css
+++ b/Projects/angular_ecommerce/src/app/components/home/home.component.css
@@ -10,7 +10,7 @@
 
 .home .section-2 {
   padding: 50px;
-  background-image: linear-gradient(to right, #8b1341, #831783);
+  background-image: linear-gradient(to right, #1c57c4, #174683);
   color: white;
 }
 
@@ -22,7 +22,7 @@
   margin: 20px;
   border-radius: 10px;
   padding: 30px;
-  box-shadow: 0px 0px 50px #5a005a;
+  box-shadow: 0px 0px 50px #00065a;
   height: auto;
 }
 
@@ -36,7 +36,7 @@
 
 .home .h1 {
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(to right, #f32170, #cf23cf);
+  background: linear-gradient(to right, #1c57c4, blue);
   -webkit-text-fill-color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
@@ -44,7 +44,7 @@
 
 .home .left-para {
   text-align: justify;
-  color: rgb(224, 0, 131);
+  color: #174683;
   font-size: 18px;
   line-height: 25px;
 }
