--- a/Projects/angular_ecommerce/src/app/components/products-edit/products-edit.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products-edit/products-edit.component.html
@@ -65,6 +65,19 @@
                     </small>
                 </div>
             </div>
+
+            <!-- price -->
+            <div class="mt-3">
+                <label class="h6">Price</label>
+                <input type="number" id="price" class="form-control" placeholder="Product price" formControlName="price">
+                <div class="text-center" *ngIf="imageForm.get('price')?.invalid && 
+                                    imageForm.get('price')?.errors && 
+                                    (imageForm.get('price')?.dirty || imageForm.get('price')?.touched)">
+                    <small class="text-danger" *ngIf="imageForm.get('price')?.hasError('required')">
+                        This field is required.
+                    </small>
+                </div>
+            </div>
         </form>
     </div>
 
