--- a/Projects/angular_ecommerce/src/app/components/products/products.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.html
@@ -49,6 +49,14 @@
                     <td mat-cell *matCellDef="let image">{{image.info}} </td>
                 </ng-container>
 
+                <!-- price Column -->
+                <ng-container matColumnDef="price">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by price">
+                        price
+                    </th>
+                    <td mat-cell *matCellDef="let image">{{image.price}} </td>
+                </ng-container>
+
                 <!-- active Column -->
                 <ng-container matColumnDef="active">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by active">
