--- a/Projects/angular_ecommerce/src/app/components/signup/signup.component.css
+++ b/Projects/angular_ecommerce/src/app/components/signup/signup.component.css
@@ -21,7 +21,7 @@
   
   .signup .form-label {
     font-family: "Poppins", sans-serif;
-    background: linear-gradient(to right, #cf23cf, #ff6b08);
+    background: linear-gradient(to right, #1c57c4, blue);
     -webkit-text-fill-color: transparent;
     background-clip: text;
     -webkit-background-clip: text;
