updated color schemes

--- a/Projects/angular_ecommerce/src/app/components/products/products.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.html
@@ -8,7 +8,7 @@
 
         <div class="text-center container mt-3">
             <input id="search" matInput [(ngModel)]="search" (keyup)="applyFilter()" placeholder="Filter">
-            <button (click)="addProduct()" class="btn btn-outline-danger btn-sm" style="margin-left: 10px;"
+            <button (click)="addProduct()" class="btn btn-outline-primary btn-sm" style="margin-left: 10px;"
                 placement="right" ngbTooltip="Add product">
                 <i class="bi bi-database-fill-add"></i>
             </button>
