--- a/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -4,9 +4,8 @@
             <button id="btn1" type="button" class="btn btn1" mat-button (click)="drawer.toggle();toggleBtn1()">
                 <i class="bi bi-arrow-right"></i>
             </button>
-
         </div>
-        <mat-drawer mode="over" #drawer>
+        <mat-drawer mode="side" #drawer>
             <button type="button" id="btn" class="btn btn2" mat-button (click)="drawer.toggle();toggleBtn1()">
                 <i class="bi bi-arrow-left"></i>
             </button>
