--- a/Projects/angular_ecommerce/src/app/components/products/products.component.css
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.css
@@ -6,7 +6,7 @@
 
 .products #heading {
   font-family: "Poppins", sans-serif;
-  color: rgb(255, 58, 58);
+  color: blue !important;
 }
 
 .products #search {
@@ -19,13 +19,13 @@
 
 .products #search:focus {
   outline: none;
-  border-bottom: 2px solid rgb(255, 87, 87);
+  border-bottom: 2px solid rgb(140, 140, 255);
   transition: 300ms;
 }
 
 .products #search:hover {
   outline: none;
-  border-bottom: 2px solid rgb(255, 87, 87);
+  border-bottom: 2px solid rgb(140, 140, 255);
   transition: 300ms;
   transform: scale(1.05);
 }
@@ -84,8 +84,8 @@
 }
 
 .products .table table th {
-  text-shadow: 0px 0px 5px rgb(255, 0, 0);
-  background-color: rgb(255, 88, 88);
+  text-shadow: 0px 0px 5px blue;
+  background-color: rgb(88, 88, 255);
   color: white;
   text-align: center;
 }
@@ -102,7 +102,7 @@
 }
 
 .products tbody tr:nth-child(even) td {
-  background-color: rgb(255, 231, 231);
+  background-color: rgb(231, 231, 255);
 }
 
 .products tbody tr:last-child td:first-child {
@@ -114,7 +114,7 @@
 }
 
 .products thead tr th:hover {
-  background-color: rgb(163, 26, 26);
+  background-color: rgb(26, 26, 255);
   color: white;
   cursor: pointer;
   transform: scale(1.1);
