--- a/Projects/angular_ecommerce/src/app/components/users/users.component.css
+++ b/Projects/angular_ecommerce/src/app/components/users/users.component.css
@@ -4,7 +4,7 @@
 
 .users #heading {
   font-family: "Poppins", sans-serif;
-  color: rgb(255, 58, 58);
+  color: rgb(58, 58, 255);
 }
 
 .users #Users-table {
@@ -38,14 +38,10 @@
 }
 
 .users .table table th {
-  text-shadow: 0px 0px 5px rgb(255, 0, 0);
-  background-color: rgb(255, 88, 88);
+  text-shadow: 0px 0px 5px blue;
+  background-color: rgb(88, 88, 255);
   color: white;
   text-align: center;
-}
-
-.users td {
-  /* text-align: center; */
 }
 
 .users thead th:first-child {
@@ -56,7 +52,7 @@
 }
 
 .users tbody tr:nth-child(even) td {
-  background-color: rgb(255, 231, 231);
+  background-color: rgb(231, 231, 255);
 }
 
 .users tbody tr:last-child td:first-child {
@@ -68,7 +64,7 @@
 }
 
 .users thead tr th:hover {
-  background-color: rgb(163, 26, 26);
+  background-color: rgb(26, 26, 255);
   color: white;
   cursor: pointer;
   transform: scale(1.1);
@@ -84,15 +80,15 @@
   padding-left: 10px;
 }
 
-.users #search:focus {
+.products #search:focus {
   outline: none;
-  border-bottom: 2px solid rgb(255, 87, 87);
+  border-bottom: 2px solid rgb(140, 140, 255);
   transition: 300ms;
 }
 
-.users #search:hover {
+.products #search:hover {
   outline: none;
-  border-bottom: 2px solid rgb(255, 87, 87);
+  border-bottom: 2px solid rgb(140, 140, 255);
   transition: 300ms;
   transform: scale(1.05);
 }
