--- a/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
+++ b/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
@@ -1,86 +1,121 @@
-<div class="cart">
+<div class="cart" style="height: 100vh;">
 
-    <div class="text-center mt-3 text-primary">
-        <div class="h2">Your cart <mat-icon>shopping_cart</mat-icon></div>
-        <hr>
-    </div>
+    <div class="row mx-auto p-5" *ngIf="myCartItems.length!=0">
 
-    <mat-list class="mt-5 d-flex flex-column">
+        <!-- cart items -->
+        <div class="col">
 
-        <mat-list-item *ngFor="let product of myCartItems" class="mb-4">
+            <!-- heading -->
+            <div class="text-center mt-3 ms-5">
+                <div class="h4">Your cart</div>
+            </div>
 
-            <div class="card products-list-mobile">
-                <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
-                <div class="card-body">
-                    <b>{{product.name}}</b><br>
-                    <i>{{product.info}}</i>
+            <!-- item list -->
+            <mat-list class="mt-1 d-flex flex-column">
 
-                    <div class="d-flex cart-price-buy mt-2">
+                <mat-list-item *ngFor="let product of myCartItems" class="cart-items">
 
-                        <div class="d-flex align-items-center inc-dec-div">
-                            <button class="btn btn-sm text-primary d-flex inc-dec-btn"
-                                (click)="increase_quantity(product.id)">
-                                &nbsp;<mat-icon>add_circle</mat-icon></button>
-                            <b class="text-primary h5 mt-2">{{product.quantity}}</b>
-                            <button class="btn btn-sm text-primary d-flex inc-dec-btn"
-                                (click)="decrease_quantity(product.id)">
-                                &nbsp;<mat-icon>remove_circle</mat-icon></button>
+                    <!-- mobile view -->
+                    <div class="card products-list-mobile">
+                        <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
+                        <div class="card-body">
+                            <b>{{product.name}}</b><br>
+                            <i>{{product.info}}</i>
+
+                            <div class="d-flex cart-price-buy mt-2">
+
+                                <div class="d-flex align-items-center inc-dec-div">
+                                    <button class="btn btn-sm text-primary d-flex inc-dec-btn"
+                                        (click)="increase_quantity(product.id)">
+                                        &nbsp;<mat-icon>add_circle</mat-icon></button>
+                                    <b class="text-primary h5 mt-2">{{product.quantity}}</b>
+                                    <button class="btn btn-sm text-primary d-flex inc-dec-btn"
+                                        (click)="decrease_quantity(product.id)">
+                                        &nbsp;<mat-icon>remove_circle</mat-icon></button>
+                                </div>
+
+                                <h2 class="me-1"><b>50/-</b></h2>
+                                <button class="btn btn-success btn-sm">Buy</button>
+                                <button class="btn btn-danger btn-sm" (click)="removeFromCart(product.id)"><i
+                                        class="bi bi-trash-fill"></i></button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- desktop view -->
+                    <div class="products-list justify-content-around">
+
+                        <div class="">
+                            <img src='{{product.image}}' (click)="goToProduct(product.id)"
+                                class="img-fluid mx-auto d-block" [height]="100" [width]="100">
                         </div>
 
-                        <h2 class="me-1"><b>50/-</b></h2>
-                        <button class="btn btn-success btn-sm">Buy</button>
-                        <button class="btn btn-danger btn-sm" (click)="removeFromCart(product.id)"><i
-                                class="bi bi-trash-fill"></i></button>
-                    </div>
-                </div>
-            </div>
+                        <div class="">
+                            <div matListItemTitle>
+                                <h1 class="product-name">{{product.name}}</h1>
+                            </div>
+                            <div matListItemLine>{{product.info}}</div>
 
-            <div class="row products-list">
+                            <div class="d-flex align-items-center">
+                                <button class="btn text-primary mt-3 d-flex" (click)="increase_quantity(product.id)">
+                                    &nbsp;<mat-icon>add_circle</mat-icon></button>
+                                <b class="text-primary h5 mt-4">{{product.quantity}}</b>
+                                <button class="btn text-primary mt-3 d-flex" (click)="decrease_quantity(product.id)">
+                                    &nbsp;<mat-icon>remove_circle</mat-icon></button>
+                            </div>
 
-                <div class="col">
-                    <img src='{{product.image}}' (click)="goToProduct(product.id)" class="img-fluid mx-auto d-block"
-                        [height]="160" [width]="160">
-                </div>
+                        </div>
 
-                <div class="col">
-                    <div matListItemTitle>
-                        <h1>{{product.name}}</h1>
-                    </div>
-                    <div matListItemLine>{{product.info}}</div>
+                        <div class="">
+                            <h1><b>{{product.price*product.quantity}}₹</b></h1>
+                            <button class="btn btn-success btn-sm mt-5">Buy</button>
+                            <button class="btn btn-danger btn-sm mt-5 ms-2" (click)="removeFromCart(product.id)"><i
+                                    class="bi bi-trash-fill"></i></button>
+                        </div>
 
-                    <div class="d-flex align-items-center">
-                        <button class="btn text-primary mt-3 d-flex" (click)="increase_quantity(product.id)">
-                            &nbsp;<mat-icon>add_circle</mat-icon></button>
-                        <b class="text-primary h5 mt-4">{{product.quantity}}</b>
-                        <button class="btn text-primary mt-3 d-flex" (click)="decrease_quantity(product.id)">
-                            &nbsp;<mat-icon>remove_circle</mat-icon></button>
                     </div>
 
+                </mat-list-item>
+
+                <div class="text-center place-order mt-5" *ngIf="myCartItems.length>0">
+                    <button class="btn btn-success">Place order</button>
                 </div>
-
-                <div class="col">
-                    <h1><b>50/-</b></h1>
-                    <button class="btn btn-success btn-sm mt-5">Buy</button>
-                    <button class="btn btn-danger btn-sm mt-5 ms-2" (click)="removeFromCart(product.id)"><i
-                            class="bi bi-trash-fill"></i></button>
-                </div>
-
-            </div>
-
-        </mat-list-item>
-        <div class="text-center place-order" *ngIf="myCartItems.length>0">
-            <button class="btn btn-success">Place order</button>
+            </mat-list>
         </div>
-    </mat-list>
+
+        <!-- payment col -->
+        <div class="col-3 payment-col bg-light">
+            <!-- heading -->
+            <div class="mt-3 ms-5">
+                <div class="h4">Payment</div>
+
+                <div class="d-flex flex-column mt-5 text-start">
+                    <label for="">Payment method: </label>
+
+                    <div class="mt-3 d-flex">
+                        <input type="radio" name="" id="">&nbsp;&nbsp;<i class="bi bi-credit-card-2-front"></i>&nbsp;
+                        Credit
+                        card
+                    </div>
+                    <div class="mt-3 d-flex">
+                        <input type="radio" name="" id="">&nbsp;&nbsp;<i class="bi bi-house-check"></i>&nbsp; Pay on
+                        delivery
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="container" id="sessionBAD" *ngIf="myCartItems.length==0">
 
         <div class="row">
-            <div class="text-center text-danger h4 col-6 col1 mx-auto">
+            <div class="text-center text-danger h4 col col1 mx-auto">
                 Your cart is empty <button type="button" routerLink="/store" class="btn btn-primary m-3">Shop</button>
             </div>
             <div class="container-fluid col-sm-auto">
-                <img class="img-fluid mx-auto d-block" src="../../../assets/images/shopping.png" width="400vw">
+                <img class="img-fluid mx-auto d-block" src="../../../assets/images/shopping.png" width="250vw">
             </div>
         </div>
 
