updated mail service password

--- a/Projects/prepopulating_data/src/app/list/list.component.html
+++ b/Projects/prepopulating_data/src/app/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="conatiner p-5">
+<div class="container p-5">
 
   <mat-form-field>
     <mat-label>Filter</mat-label>
@@ -69,6 +69,6 @@
       </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" showFirstLastButtons="true"></mat-paginator>
   </div>
 </div>
