--- a/Projects/prepopulating_data/src/app/footer/footer.component.css
+++ b/Projects/prepopulating_data/src/app/footer/footer.component.css
@@ -1,5 +1,6 @@
-.footer{
-    position: absolute;
-    width: 100%;
-    height: 59px;
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 59px;
 }
