--- a/Projects/prepopulating_data/src/app/list/list.component.css
+++ b/Projects/prepopulating_data/src/app/list/list.component.css
@@ -1,10 +1,12 @@
 table {
-    width: 100%;
-  }
-  
-  .mat-mdc-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
+  width: 100%;
+}
 
-  
+.container {
+  height: 105vh;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
