added remove all items from cart

--- a/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
+++ b/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
@@ -10,6 +10,12 @@
                 <div class="h4">Your cart</div>
             </div>
 
+            <!-- remove all -->
+            <div class="text-center mt-3 ms-5">
+                <button class="btn btn-danger" (click)="removeAllItems()">remove all <i
+                        class="bi bi-bag-x"></i></button>
+            </div>
+
             <!-- item list -->
             <mat-list class="mt-1 d-flex flex-column">
 
